crates/toml_edit/tests/snapshots/invalid/float/exp-trailing-us-1.stderr
TOML parse error at line 1, column 22
  |
1 | exp-trailing-us-1 = 1_e2
  |                      ^
`_` may only go between digits
